chore: Adiciona logos das lojas

--- a/src/index.html
+++ b/src/index.html
@@ -140,8 +140,8 @@
         <img src="./assets/logo-mubank.png" alt="Logo MuBank">
         <p>&copy; 2024 MuBank. Todos os direitos reservados.</p>
         <div class="app-stores">
-            <img src="logo-google-play.png" alt="Google Play">
-            <img src="logo-app-store.png" alt="App Store">
+            <img src="./assets/logo-google-play.png" alt="Google Play">
+            <img src="./assets/logo-apple-store.png" alt="App Store">
         </div>
     </footer>
 </body>
