--- a/src/index.html
+++ b/src/index.html
@@ -137,7 +137,7 @@
     </main>
 
     <footer>
-        <img src="./assets/logo-mubank.png" alt="Logo MuBank">
+        <img src="./assets/logo_mu_bank.svg" alt="Logo MuBank">
         <p>&copy; 2024 MuBank. Todos os direitos reservados.</p>
         <div class="app-stores">
             <img src="./assets/logo-google-play.png" alt="Google Play">
