feat: Adicionando conteúdo e estilo ao footer

--- a/src/index.html
+++ b/src/index.html
@@ -132,17 +132,54 @@
               </div>
               <div class="image">
                 <img src="https://example.com/loans-image.jpg" alt="Empréstimos">
+                <i class="ph ph-hand-coins"></i>
               </div>
             </div>
           </section>
     </main>
 
-    <footer>
-        <img src="./assets/logo_mu_bank.svg" alt="Logo MuBank">
-        <p>&copy; 2024 MuBank. Todos os direitos reservados.</p>
-        <div class="app-stores">
-            <img src="./assets/logo-google-play.png" alt="Google Play">
-            <img src="./assets/logo-apple-store.png" alt="App Store">
+    <footer class="py-5">
+        <div class="row mb-3">
+          <div class="col-6 text-start px-5">
+            <p class="opacity-75"><b>Fale com a gente</b></p>
+            <p>
+              Capitais e Regiões metropolitanas<br/>
+              <b>4002 8922</b>
+            </p>
+            <p>
+              Demais localidades<br/>
+              <b>0800 7070</b>
+            </p>
+            <p>contato@mubank.com.br</p>
+          </div>
+          <div class="col-6 text-start px-5">
+            <p class="opacity-75"><b>Ouvidoria</b></p>
+            <b>0800 702 7643</b>
+            <p>ouvidoria@mubank.com.br</p>
+            <p>Atendimento das 9h às 17h (dias úteis)</p>
+          </div>
+        </div>
+        <div class="row px-5">
+          <div class="col-6 text-start">
+            <div class="text-start">
+              <img src="./assets/logo_mu_bank.svg" alt="Logo MuBank">
+              <p class="opacity-75">
+                MuBank Corporation &copy; 2024<br/> 
+                Todos os direitos reservados
+              </p>
+            </div>
+          </div>
+          <div class="col-6 text-start px-5">
+            <h4 class="opacity-75">Baixe o App</h4>
+            <p>
+              <i class="ph ph-google-play-logo"></i>
+              Google Play
+            </p>            
+            <p>
+              <i class="ph ph-apple-logo"></i>
+              Apple Store
+            </p>
+          </div>
         </div>
     </footer>
 </body>
