feat: Estiliza cards, ajustes na home da landing page

--- a/src/index.html
+++ b/src/index.html
@@ -10,23 +10,28 @@
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
 </head>
 <body>
-    <header>
+    <header class="bg-verde-200 verde-900 d-flex align-items-center shadow-lg justify-content-between">
         <img src="./assets/logo-mubank.png" alt="Logo MuBank">
         <nav>
-            <ul>
+            <ul class="list-unstyled d-flex gap-4 align-content-center h-100">
                 <li><a href="#">Início</a></li>
                 <li><a href="#">Vantagens</a></li>
                 <li><a href="#">Serviços</a></li>
                 <li><a href="#">Sobre nós</a></li>
-                <li><button class="btn-abrir-conta">Abrir Conta</button></li>
-            </ul>
-        </nav>
+              </ul>
+          </nav>
+          <button class="btn-acessar-conta">Acessar Conta!</button>
     </header>
 
     <main>
-        <section class="hero">
-            <h1>Revolucione Sua Experiência Bancária: <br> Abra sua conta digital em minutos</h1>
-            <button class="btn-abrir-conta">Abrir Conta</button>
+        <section class="hero d-flex align-items-center">
+          <div class="bg-verde-200-opacity-40 verde-900 p-2 text-center w-50 py-4">
+            <p class="font-bold fs-5 m-0">
+              Revolucione Sua Experiência Bancária: <br/> 
+              Abra sua conta digital em minutos
+            </p>
+            <button class="btn-abrir-conta my-2">Abra sua conta agora!</button>
+          </div>
         </section>
 
         <section class="benefits">
@@ -63,6 +68,7 @@
                 <h3>Inovação e Atualizações Constantes</h3>
                 <p>Aproveite atualizações frequentes com novas funcionalidades e melhorias.</p>
               </li>
+              <div></div>
               <li>
                 <h3>Sustentabilidade</h3>
                 <p>Adote práticas mais sustentáveis com menos uso de papel e operações online.</p>
