--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MuBank</title>
@@ -8,25 +10,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <script src="https://unpkg.com/@phosphor-icons/web"></script>
     <link rel="icon" type="image/png" href="./assets/favicon.png" />
+    <link href="https://fonts.googleapis.com/css2?family=Jaldi:wght@400;700&display=swap" rel="stylesheet">
 </head>
 <body>
     <header class="bg-verde-200 verde-900 d-flex align-items-center shadow-lg justify-content-between">
         <img src="./assets/logo-mubank.png" alt="Logo MuBank">
         <nav>
             <ul class="list-unstyled d-flex gap-4 align-content-center h-100">
-                <li><a href="#">Início</a></li>
-                <li><a href="#">Vantagens</a></li>
-                <li><a href="#">Serviços</a></li>
-                <li><a href="#">Sobre nós</a></li>
+                <li><a href="#home">Início</a></li>
+                <li><a href="#vantagens">Vantagens</a></li>
+                <li><a href="#services">Serviços</a></li>
+                <li><a href="#about">Sobre nós</a></li>
               </ul>
           </nav>
           <button class="btn-acessar-conta">Acessar Conta!</button>
     </header>
 
     <main>
-        <section class="hero d-flex align-items-center">
+        <section class="hero d-flex align-items-center" id="home">
           <div class="bg-verde-200-opacity-40 verde-900 p-2 text-center w-50 py-4">
-            <p class="font-bold fs-5 m-0">
+            <p class="font-bold fs-3 m-0">
               Revolucione Sua Experiência Bancária: <br/> 
               Abra sua conta digital em minutos
             </p>
@@ -82,70 +85,122 @@
           
 
         <section class="limite">
-            <h2>Aqui no MuBank você terá MUUUUUito Limite!</h2>
-        </section>
-
-        <section class="vantagens">
-            <h2>Vantagens de ter uma conta Mu</h2>
-            <div class="vantagem">
-                <img src="icone-versatilidade.png" alt="Ícone Versatilidade">
-                <h3>Versatilidade e Acessibilidade para Todas as Idades</h3>
-                <p>Facilidade em Usar, Acessível no Computador e no Celular!</p>
+            <div class="section-title my-5">
+              <h2>Aqui no MuBank você terá MUUUUUito Limite!</h2>
             </div>
         </section>
 
-        <section class="services">
-            <h2>Nossos Serviços</h2>
-            <div class="service" id="credit-card">
-              <div class="content">
-                <h3>Cartão de Crédito</h3>
-                <p>Nosso cartão de crédito oferece benefícios exclusivos, incluindo programas de recompensas, cashback em compras e zero anuidade.</p>
+        <section class="vantagens" id="vantagens">
+            <div class="section-title mt-5">
+              <h2>Vantagens de ter uma conta Mu</h2>
+            </div>
+            <div class="row">
+              <div class="col-6 p-0">
+                <img 
+                  class="vantagem-img"
+                  src="./assets/Vantagem-1.png" 
+                  alt="Vantagens" />
               </div>
-              <div class="image">
-                <img src="https://example.com/credit-card-image.jpg" alt="Cartão de Crédito">
+              <div class="w-50 bg-verde-200">
+                <div class="d-flex flex-column flex-grow-1 justify-content-center text-start h-100 px-5">
+                  <h3 class="verde-900 font-bold">
+                    Versatilidade e Acessibilidade para Todas as Idades.
+                  </h3>
+                  <p>
+                    Nosso banco digital é projetado para ser intuitivo e fácil de usar, independentemente da sua idade. Seja você jovem, adulto ou idoso, oferecemos uma experiência bancária segura e acessível para todos.
+                  </p>
+                </div>
               </div>
             </div>
-            <div class="service" id="debit-card">
-              <div class="content">
-                <h3>Cartão de Débito</h3>
-                <p>Com nosso cartão de débito, você tem acesso imediato ao seu dinheiro, pagamentos seguros e aceitação global.</p>
+            <div class="row">
+              <div class="col-6 w-50 bg-verde-200">
+                <div class="d-flex flex-column flex-grow-1 justify-content-center text-start h-100 px-5">
+                  <h3 class="verde-900 font-bold">
+                    Facilidade em Usar, Acessível no Conforto do Seu Lar
+                  </h3>
+                  <p>
+                    Nosso banco digital é projetado para ser intuitivo e fácil de usar, independentemente da sua idade. Seja você jovem, adulto ou idoso, oferecemos uma experiência bancária segura e acessível para todos.
+                  </p>
+                </div>
               </div>
-              <div class="image">
-                <img src="https://example.com/debit-card-image.jpg" alt="Cartão de Débito">
-              </div>
-            </div>
-            <div class="service" id="pix">
-              <div class="content">
-                <h3>Pix</h3>
-                <p>Realize transferências e pagamentos instantâneos com Pix, disponível 24/7, sem taxas adicionais.</p>
-              </div>
-              <div class="image">
-                <img src="https://example.com/pix-image.jpg" alt="Pix">
-              </div>
-            </div>
-            <div class="service" id="insurance">
-              <div class="content">
-                <h3>Seguros</h3>
-                <p>Proteja o que é importante para você com nossos seguros personalizados e cobertura abrangente.</p>
-              </div>
-              <div class="image">
-                <img src="https://example.com/insurance-image.jpg" alt="Seguros">
+              <div class="col-6 w-50 p-0">
+                <img 
+                  class="vantagem-img"
+                  src="./assets/Vantagem-2.png" 
+                  sizes="100vw"
+                  alt="Vantagens" />
               </div>
             </div>
-            <div class="service" id="loans">
-              <div class="content">
-                <h3>Empréstimos</h3>
-                <p>Oferecemos empréstimos com taxas competitivas e prazos flexíveis para atender às suas necessidades financeiras.</p>
+        </section>
+
+        <section class="services mb-5" id="services">
+            <div class="section-title my-5">
+              <h2>Nossos Serviços</h2>
+            </div>
+
+            <div class="row my-5">
+              <div class="col-6 d-flex justify-content-end align-items-center verde-900">
+                <i class="ph ph-credit-card" style="font-size: 82px;"></i>
               </div>
-              <div class="image">
-                <img src="https://example.com/loans-image.jpg" alt="Empréstimos">
-                <i class="ph ph-hand-coins"></i>
+              <div class="col-6">
+                <div class="w-75 service">
+                  <h3>Cartão de Crédito</h3>
+                  <p>Nosso cartão de crédito oferece benefícios exclusivos, incluindo programas de recompensas, cashback em compras e zero anuidade.</p>
+                </div>
               </div>
             </div>
-          </section>
+
+            <div class="row my-5">
+              <div class="col-6 d-flex justify-content-end">
+                <div class="w-75 service">
+                  <h3>Cartão de Débito</h3>
+                  <p>Com nosso cartão de débito, você tem acesso imediato ao seu dinheiro, pagamentos seguros e aceitação global.</p>
+                </div>
+              </div>
+              <div class="col-6 d-flex justify-content-start align-items-center verde-900">
+                <i class="ph ph-cardholder" style="font-size: 82px;"></i>
+              </div>
+            </div>
+
+            <div class="row my-5">
+              <div class="col-6 d-flex justify-content-end align-items-center verde-900">
+                <i class="ph ph-pix-logo" style="font-size: 82px;"></i>
+              </div>
+              <div class="col-6 d-flex justify-content-start">
+                <div class="w-75 service">
+                  <h3>Pix</h3>
+                  <p>Realize transferências e pagamentos instantâneos com Pix, disponível 24/7, sem taxas adicionais.</p>
+                </div>
+              </div>
+            </div>
+
+            <div class="row my-5">
+              <div class="col-6 d-flex justify-content-end">
+                <div class="w-75 service">
+                  <h3>Seguros</h3>
+                  <p>Proteja o que é importante para você com nossos seguros personalizados e cobertura abrangente.</p>
+                </div>
+              </div>
+              <div class="col-6 d-flex justify-content-start align-items-center verde-900">
+                <i class="ph ph-shield-check" style="font-size: 82px;"></i>
+              </div>
+            </div>
+
+            <div class="row my-5">
+              <div class="col-6 d-flex justify-content-end align-items-center verde-900">
+                <i class="ph ph-hand-coins" style="font-size: 82px;"></i>
+              </div>
+              <div class="col-6 d-flex justify-content-start">
+                <div class="w-75 service">
+                  <h3>Empréstimos</h3>
+                  <p>Oferecemos empréstimos com taxas competitivas e prazos flexíveis para atender às suas necessidades financeiras.</p>
+                </div>
+              </div>
+            </div>
+      </section>
     </main>
 
-    <footer class="py-5">
+    <footer class="py-5 user-select-none mt-5">
         <div class="row mb-3">
           <div class="col-6 text-start px-5">
             <p class="opacity-75"><b>Fale com a gente</b></p>
@@ -178,13 +233,13 @@
           </div>
           <div class="col-6 text-start px-5">
             <h4 class="opacity-75">Baixe o App</h4>
-            <p>
+            <p class="d-flex align-items-center gap-2 mb-2 cursor-pointer">
               <i class="ph ph-google-play-logo"></i>
-              Google Play
+              <span>Google Play</span>
             </p>            
-            <p>
+            <p class="d-flex align-items-center gap-2 cursor-pointer">
               <i class="ph ph-apple-logo"></i>
-              Apple Store
+              <span>Apple Store</span>
             </p>
           </div>
         </div>
