feat: adiciona tela de cadastro

--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
               Revolucione Sua Experiência Bancária: <br/> 
               Abra sua conta digital em minutos
             </p>
-            <button class="btn-abrir-conta my-2">Abra sua conta agora!</button>
+            <button class="btn-abrir-conta my-2" onclick="location.href='signup.html';">Abra sua conta agora!</button>
           </div>
         </section>
 
