--- a/src/signup.html
+++ b/src/signup.html
@@ -20,32 +20,37 @@
 
     <main>
         <section class="signup-image d-flex flex-row-reverse align-items-center">
-          <div class="signup-form form-bg-color verde-900 text-center w-25">
+          <div class="signup-form form-bg-color verde-900 w-25">
             <h4>Crie Sua Conta</h4>
             <form action="" class="side-form-section">
                 <div class="form-box">
                     <label for="name" class="side-form-labels">Nome:</label>
-                    <input type="text" name="name" placeholder="seu nome aqui"/>
+                    <input type="text" name="name"/>
                 </div>
                 <div class="form-box">
                     <label for="cpf" class="side-form-labels">CPF:</label>
-                    <input type="text" name="name" placeholder="seu nome aqui"/>
+                    <input type="text" name="cpf" />
                 </div>
                 <div class="form-box">
                     <label for="password" class="side-form-labels">Senha:</label>
-                    <input type="password" name="password" placeholder="******" />
+                    <input type="password" name="password" />
                 </div>
 
+                <button class="btn-abrir-conta btn-form-abrir-conta shadow">Cadastrar</button>
             </form>
 
-            <button class="btn-abrir-conta my-2">Abra sua conta agora!</button>
           </div>
         </section>
 
         
 
-    <footer class="bg-verde-200 py-5 user-select-none mt-5">
+    <footer class="bg-verde-200 footer-app">
+        <img src="./assets/logo-mubank.png" alt="Logo MuBank">
 
+        <div>
+            <p>MuBank Corporation © 2024</p>
+            <p>Todos direitos reservados.</p>
+        </div>
     </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
