feat: Adiciona tela de sobre nós

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
                 <li><a href="#home">Início</a></li>
                 <li><a href="#vantagens">Vantagens</a></li>
                 <li><a href="#services">Serviços</a></li>
-                <li><a href="#about">Sobre nós</a></li>
+                <li><a href="./about-us.html">Sobre nós</a></li>
               </ul>
           </nav>
           <button class="btn-acessar-conta">Acessar Conta!</button>
