--- a/src/about-us.html
+++ b/src/about-us.html
@@ -19,7 +19,7 @@
         </div>
         <nav class="d-flex gap-4 align-items-center">
             <a href="./index.html">Home</a>
-            <button class="btn-acessar-conta">Acessar conta!</button>
+            <button class="btn-acessar-conta">Acessar Conta!</button>
         </nav>
     </header>
 
