--- a/src/about-us.html
+++ b/src/about-us.html
@@ -15,15 +15,17 @@
 <body>
     <header class="bg-verde-200">
         <div class="logo">
-            <img src="./assets/logo-mubank.png" alt="Logo MuBank">
+            <a href="index.html">
+              <img src="./assets/logo-mubank.png" alt="Logo MuBank">
+            </a>
         </div>
         <nav class="d-flex gap-4 align-items-center">
             <a href="./index.html">Home</a>
-            <button class="btn-acessar-conta">Acessar Conta!</button>
+            <button class="btn-acessar-conta" onclick="window.location.href = './login.html'">Acessar Conta!</button>
         </nav>
     </header>
 
-    <main class="d-flex align-items-center my-5">
+    <main class="d-flex align-items-center my-5 h-100 flex-grow-1">
         <div class="w-50">
             <div class="px-5 text-start service">
                 <h1 class="font-x-bold verde-900">Sobre o Mu</h1>
@@ -31,8 +33,8 @@
             </div>
         </div>
 
-        <div class="w-50">
-            <img src="./assets/CataoDefault.png" alt="Cartão MuBank">
+        <div class="w-50 user-select-none cursor-pointer">
+            <img id="card" src="./assets/CataoDefault.png" alt="Cartão MuBank">
         </div>
     </main>
 
@@ -81,4 +83,5 @@
         </div>
     </footer>
 </body>
+<script src="./js/changeCardColor.js"></script>
 </html>
